German Translation: corrections

--- a/po/wesnoth-anl/de.po
+++ b/po/wesnoth-anl/de.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2019-04-07 23:14+0200\n"
+"PO-Revision-Date: 2019-06-06 23:44+0200\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -136,7 +136,7 @@ msgid ""
 "One of your peasants has happened upon some spiders’ nests in the north and "
 "south."
 msgstr ""
-"Einer Eurer Bauern ist zufällig auf ein Spinnennest im Norden und Süden "
+"Einer Eurer Bauern ist zufällig auf einige Spinnennester im Norden und Süden "
 "gestoßen."
 
 #. [message]: type=Peasant
@@ -145,7 +145,7 @@ msgid ""
 "I swear I saw somebody trapped in the spider’s web. Maybe we should rescue "
 "him?"
 msgstr ""
-"Herr, ich schwöre euch, dass ich jemanden in den Netzen der Spinne gefangen "
+"Herr, ich schwöre Euch, dass ich jemanden in den Netzen der Spinne gefangen "
 "sah. Vielleicht sollten wir ihn retten?"
 
 #. [message]: speaker=narrator
@@ -208,7 +208,7 @@ msgstr ""
 msgid "You have won the game, but you may continue if you wish..."
 msgstr ""
 "Ihr habt diese Partie gewonnen, doch dürft Ihr fortfahren so denn Ihr dies "
-"wünscht..."
+"wünscht…"
 
 #. [message]: speaker=unit
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:724
@@ -251,7 +251,7 @@ msgid ""
 msgstr ""
 "Bauern sind Eure Arbeiter. Abhängig vom aktuellen Gelände kann man per "
 "Rechtsklick die Landschaft umformen, Burgen und Bergwerke bauen, Dörfer und "
-"Universitäten gründen, oder Ackerland anlegen."
+"Universitäten gründen oder Ackerland anlegen."
 
 #. [message]: speaker=narrator
 #. [option]
@@ -365,17 +365,17 @@ msgstr ""
 #. [set_menu_item]: id=anl_help
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:87
 msgid "Help"
-msgstr "Hilfe"
+msgstr "Spielanleitung"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:111
 msgid "A New Land — Help"
-msgstr "Eine neue Heimat - Hilfe"
+msgstr "Eine neue Heimat – Spielanleitung"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:112
 msgid "Select a topic."
-msgstr "Wählt ein Thema, dass Euch interessiert."
+msgstr "Wählt ein Thema, dass Euch interessiert:"
 
 #. [option]
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:115
@@ -461,7 +461,7 @@ msgstr "Was soll ich machen?"
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:301
 #: data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg:47
 msgid "Nothing"
-msgstr "Nichts"
+msgstr "Nichts unternehmen"
 
 #. [option]
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:314
