--- a/po/wesnoth-units/de.po
+++ b/po/wesnoth-units/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-02-23 19:28+0100\n"
+"PO-Revision-Date: 2019-06-07 01:12+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -4629,14 +4629,14 @@ msgid ""
 "effective chase over land, and are at a great disadvantage in hand-to-hand "
 "combat."
 msgstr ""
-"Die Netzmeister des Mervolks nutzen meist eine Kombination aus Netzen und "
+"Die Netzmeister des Meervolks nutzen meist eine Kombination aus Netzen und "
 "Knüppeln zum Fischen; Netze, um Fische zu fangen und Keulen, um sie zu "
 "töten. Diese beiden Werkzeuge wurden für den Krieg angepasst und sind "
 "verlässlich genug, dass Unterstützungseinheiten, die sich auf sie "
 "spezialisiert haben, oft in den Kampf geführt werden.\n"
 "\n"
 "Meermänner finden sich oft in einem Patt mit Feinden an Land wieder; das "
-"Mervolk ist zu stark im Wasser und am Land zu schwach um eine Offensive zu "
+"Meervolk ist zu stark im Wasser und am Land zu schwach um eine Offensive zu "
 "starten. Netze sind der Schlüssel, um dies zu ändern; ohne Netze können "
 "Meermänner keine Verfolgung an Land gewinnen und sind im Nahkampf einem "
 "großen Nachteil ausgesetzt."
@@ -4655,8 +4655,8 @@ msgid ""
 "iconic tridents make them mighty foes to try to combat in the seas, but they "
 "lose almost all their mobility if forced to fight on land."
 msgstr ""
-"Die Mervolkgesellschaft trainiert ihre Truppen streng und sorgfältig und als "
-"Resultat wird der Frieden in ihrem Reich von Soldaten erhalten, die die "
+"Die Meervolkgesellschaft trainiert ihre Truppen streng und sorgfältig und "
+"als Resultat wird der Frieden in ihrem Reich von Soldaten erhalten, die die "
 "unumstrittenen Champions ihrer aquatischen Heimat sind. Ihre Fähigkeiten mit "
 "dem ikonischen Dreizack und ihr Durchhaltevermögen machen sie zu mächtigen "
 "Gegnern, wenn sie im Wasser herausgefordert werden; wenn sie jedoch "
@@ -4769,7 +4769,7 @@ msgid ""
 "shore. Clubs were used in combat with little or no adaptation from fishing, "
 "since they were already quite deadly."
 msgstr ""
-"Das Fischen nach Mervolkart besteht hauptsächlich darin, einen Schwarm "
+"Das Fischen nach Meervolkart besteht hauptsächlich darin, einen Schwarm "
 "Fische in die ausgelegten Netze zu treiben, wo ruderartige Knüppel dazu "
 "genutzt werden, die Beute zu töten. Diese Methode improvisatorisch gegen "
 "Soldaten einzusetzen, hat sich als sehr effektiv erwiesen; die meisten "
@@ -4895,7 +4895,7 @@ msgid ""
 "of other races, but doubly so considering the difficulties of fighting "
 "underwater, as any who try to match them in their homes can attest."
 msgstr ""
-"Die Nöck bilden den Kern der Mervolkarmeen. Sie führen ihre Dreizacke mit "
+"Die Nöck bilden den Kern der Meervolkarmeen. Sie führen ihre Dreizacke mit "
 "einer Geschicklichkeit, die im Vergleich zu Soldaten anderer Völker "
 "beeindruckend ist, mehr noch, wenn man die Schwierigkeiten, die der Kampf "
 "unter Wasser mit sich bringt, bedenkt, wie es jeder bezeugen kann, der "
@@ -5125,9 +5125,9 @@ msgid ""
 "makes them the tool of choice for ambitious but inexperienced summoners."
 msgstr ""
 "Schlammkriecher sind simple Lebensformen, die sich aus Erde und Wasser "
-"bilden und sich verteidigen, indem sie mit überaschender Kraft Klumpen aus "
+"bilden. Sie verteidigen sich, indem sie mit überaschender Kraft Klumpen aus "
 "Schlamm spucken. Obwohl sie langsam, fragil und anfällig für Feuer sind, "
-"sorgen ihre leichte Erschaffung und die Resistenz gegen die improvisierten, "
+"machen ihre leichte Erschaffung und die Resistenz gegen die improvisierten, "
 "stumpfen Waffen normaler Bürger sie zum bevorzugten Werkzeug für eifrige "
 "aber unerfahrene Beschwörer."
 
@@ -5153,8 +5153,8 @@ msgstr ""
 "Schiffe zu zerstören und scheinbar endlose Stärke und Vitalität besitzen, "
 "sind zerstörerisch und gnadenlos gegenüber jedem, der es wagt, sie zu "
 "bekämpfen. Die normalerweise in der Tiefsee lebenden Seeschlangen schüchtern "
-"selbst die Elite der Mervolkkrieger ein und sind der Grund dafür, dass das "
-"Mervolk selten Wasser weit entfernt vom Ufer bewohnt."
+"selbst die Elite der Meervolkkrieger ein und sind der Grund dafür, dass das "
+"Meervolk selten Wasser weit entfernt vom Ufer bewohnt."
 
 #. [unit_type]: id=Skeletal Dragon, race=undead
 #: data/core/units/monsters/Skeletal_Dragon.cfg:4
