--- a/po/wesnoth-dm/de.po
+++ b/po/wesnoth-dm/de.po
@@ -1458,7 +1458,7 @@ msgstr ""
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:192
 msgid "Are you sure that’s wise?"
-msgstr "Seid ihr sicher, dass dies eine weise Entscheidung ist?"
+msgstr "Seid Ihr sicher, dass dies eine weise Entscheidung ist?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:196
