updated Turkish translation

--- a/po/wesnoth-l/tr.po
+++ b/po/wesnoth-l/tr.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2019-05-17 12:59+0300\n"
+"PO-Revision-Date: 2019-06-08 01:33+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
-"Language-Team: Turkish <wesnoth-tr@googlegroups.com>\n"
+"Language-Team: Turkish\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,10 +64,10 @@ msgid ""
 "troops but darker foes including orcs and undead.\n"
 "\n"
 msgstr ""
-"Wesnoth’ta iç savaş rüzgarları eserken, zor durumdaki sınır köylülerinden "
+"Vesnot’ta iç savaş rüzgarları eserken, zor durumdaki sınır köylülerinden "
 "oluşan bir grup Kraliçe ’nin istibtadına karşı isyan ettiler. Özgürlüklerini "
-"kazanmamın yolu sadece Wesnoth askerlerinin eğitimli kılıçlarından geçse "
-"yine iyi, ama karanlık düşmanları arasında orklar ve yarı ölüler de var.\n"
+"kazanmamın yolu sadece Vesnot askerlerinin eğitimli kılıçlarından geçse yine "
+"iyi, ama karanlık düşmanları arasında orklar ve yarı ölüler de var.\n"
 "\n"
 
 #. [campaign]: id=Liberty
@@ -75,7 +75,7 @@ msgstr ""
 #, fuzzy
 #| msgid "(Novice level, 8 scenarios.)"
 msgid "(Intermediate level, 8 scenarios.)"
-msgstr "(Çaylak seviyesi, 8 senaryo.)"
+msgstr "(Toy seviyesi, 8 senaryo.)"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -156,9 +156,9 @@ msgid ""
 "sought to consolidate her ill-gotten power. She sent her armies across "
 "Wesnoth to intimidate the provincial rulers and secure her continued reign."
 msgstr ""
-"Kraliçe Aşivye’nin krala ihanetinden sonra, Wesnoth’un yeni yöneticisi "
+"Kraliçe Aşivye’nin krala ihanetinden sonra, Vesnot’un yeni yöneticisi "
 "kötülükle elde ettiği gücünü pekiştirme arayışına girişti. Eyalet "
-"yöneticilerine gözdağı vermek ve hükümdarlığını güvene almak için Wesnoth "
+"yöneticilerine gözdağı vermek ve hükümdarlığını güvene almak için Vesnot "
 "üzerine ordularını gönderdi."
 
 #. [part]
@@ -393,7 +393,7 @@ msgid ""
 "her banner flies we will resist the horde."
 msgstr ""
 "Savaş başladığından beri kral buraya devriye göndermeyi durdurdu. Bu evvelce "
-"de olmuş ve bütün yük bize kalmıştı. Biz Wesnoth vatandaşlarıyız ve Wesnoth "
+"de olmuş ve bütün yük bize kalmıştı. Biz Vesnot vatandaşlarıyız ve Vesnot "
 "bayrağı dalgalandığı sürece direnişimiz sürecek."
 
 #. [message]: speaker=Harper
@@ -528,7 +528,7 @@ msgstr "Aşivye"
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:70
 msgid "Kill the Wesnoth army captain, Tarwen"
-msgstr "Wesnoth yüzbaşısı Tarven’i öldür"
+msgstr "Vesnot yüzbaşısı Tarven’i öldür"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:120
@@ -552,7 +552,7 @@ msgstr ""
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:141
 msgid "Garard is the King of Wesnoth. We are ruled by no queen."
-msgstr "Wesnoth’un kralı Garard’dır. Biz kraliçeyi tanımayız."
+msgstr "Vesnot’un kralı Garard’dır. Biz kraliçeyi tanımayız."
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:145
@@ -568,7 +568,7 @@ msgid ""
 "words with you. Your magistrate will be coming with us, and we do not care "
 "if it is dead or alive."
 msgstr ""
-"Küstah köylüler, üstün kimselerin önünde diz çökeceksiniz! Aşivye, Wesnoth "
+"Küstah köylüler, üstün kimselerin önünde diz çökeceksiniz! Aşivye, Vesnot "
 "kraliçesidir. Kral üç hafta önce Abez’de yenildi. Sizinle laf "
 "yarıştırmayacağım. Sorumlunuz bizimle gelecek. Canlı ya da cansız, farketmez."
 
@@ -632,7 +632,7 @@ msgid ""
 "lands, but some sinister thing is happening with the ascent of the Queen to "
 "the throne."
 msgstr ""
-"Pekala. Delvin’e gidip bunları konseyle paylaşalım. Wesnoth’un asla "
+"Pekala. Delvin’e gidip bunları konseyle paylaşalım. Vesnot'un asla "
 "karanlıkta kalacağını düşünmüyorum. Artık topraklarımızda sadece ork tehtidi "
 "yok. Tahta kraliçenin çıkmasıyla bir takım uğursuz şeyler olmaya başladı."
 
@@ -642,7 +642,7 @@ msgid ""
 "Today we may no longer be citizens of Wesnoth. I wish it could be otherwise, "
 "but we are now outlaws."
 msgstr ""
-"Bugünden itibaren Wesnoth vatandaşları olmayabiliriz. Böyle olmasını "
+"Bugünden itibaren Vesnot vatandaşları olmayabiliriz. Böyle olmasını "
 "istemezdim ama biz artık eşkiyayız."
 
 #. [message]: speaker=Baldras
@@ -745,7 +745,7 @@ msgid ""
 "leader was no man I had ever seen in Annuvin province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 msgstr ""
-"Sen anlamıyorsun. Biz Wesnoth ordusunun devriyesine saldırdık. Sadece bu "
+"Sen anlamıyorsun. Biz Vesnot ordusunun devriyesine saldırdık. Sadece bu "
 "değil, liderleri evvelce Annuvin eyaletinde hiç görmediğim biriydi. Şimdiye "
 "kadar hiç bu kadar merhametsiz ve gaddar bir devriye yüzbaşısı "
 "gönderilmemişti."
@@ -780,7 +780,7 @@ msgid ""
 "and treachery? We should consult with Lord Maddock of Elensefar. We have "
 "known him for years to be noble in deed as well as in name."
 msgstr ""
-"Ilımlılığa saldırı, bu! Wesnoth ne zamandan beri korku ve ihanetle yöretilir "
+"Ilımlılığa saldırı, bu! Vesnot ne zamandan beri korku ve ihanetle yöretilir "
 "oldu? Elensefar Lordu Maddok ile durum muhakemesi yapmalıyız. Onun ismi "
 "kadar asil biri olduğunu yıllardır biliriz."
 
@@ -884,7 +884,7 @@ msgid ""
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
 "Retreat!!"
 msgstr ""
-"Burada çok fazla oyalandık... Elensefar’a gidip Wesnoth ordusu evlerimizi "
+"Burada çok fazla oyalandık... Elensefar’a gidip Vesnot ordusu evlerimizi "
 "yıkmadan önce yardımla dönebileceğimiz bir yol kalmadı. Geri çekiliyoruz!!"
 
 #. [message]: speaker=narrator
@@ -897,7 +897,7 @@ msgid ""
 msgstr ""
 "Baldras ve Relana köylerine döndüklerinde köyleri yokedilmişti, ölüler, "
 "savaşanlar ve hayatta kalan birkaç kişi bilinmeyen bir kadere teslim oldu. "
-"Acı bir sondu ve Wesnoth'un geleceği giderek karanlığa gömülürken onlar daha "
+"Acı bir sondu ve Vesnot'un geleceği giderek karanlığa gömülürken onlar daha "
 "kötü günleri görmek için yaşayacaklardı."
 
 #. [scenario]: id=04_Unlawful_Orders
@@ -1000,7 +1000,7 @@ msgid ""
 msgstr ""
 "Küçük köyleri kendilerine bağladıktan sonra son olarak benim yanıma gelip "
 "yemin etmemi istemelerine kadar aramızda huzursuz bir barış var. Elensefar "
-"ile Wesnoth arasındaki anlaşma çok eskilere dayanır, fakat tüm ümidimi o "
+"ile Vesnot arasındaki anlaşma çok eskilere dayanır, fakat tüm ümidimi o "
 "anlaşmaya bağlayacak kadar saf değilim. Bunlar zor zamanlar."
 
 #. [message]: speaker=Harper
@@ -1115,8 +1115,8 @@ msgid ""
 msgstr ""
 "Etmeyeceğim. Benden, şehrin hırsızlarının senin yanında döğüşmesi için "
 "şehirden toplanmasını istemedikçe, benim sana verecek fazladan askerim "
-"olmayacaktır. Bununla birlikte, Wesnoth’un bu köşesinde askerlere komuta "
-"eden bir tek ben değilim."
+"olmayacaktır. Bununla birlikte, Vesnot’un bu köşesinde askerlere komuta eden "
+"bir tek ben değilim."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:646
@@ -1138,7 +1138,7 @@ msgid ""
 "Wish us well. If we are to resist the Wesnoth army a second time, we’re "
 "going to need more than clubs and slings against steel."
 msgstr ""
-"İstemesi bizden. Eğer Wesnoth ordusuna ikinci kez direnirsek, çeliğe karşı "
+"İstemesi bizden. Eğer Vesnot ordusuna ikinci kez direnirsek, çeliğe karşı "
 "sopalarımız ve sapanlarımızdan başka bir şeye ihtiyacımız yok demektir."
 
 #. [message]: speaker=Baldras
@@ -1308,7 +1308,7 @@ msgstr ""
 msgid ""
 "As soon as we escape the Wesnoth death squad, we will be happy to oblige."
 msgstr ""
-"Mümkün olduğunca erken Wesnoth ölüm müfrezesinden kaçarak iyilik etmekten "
+"Mümkün olduğunca erken Vesnot ölüm müfrezesinden kaçarak iyilik etmekten "
 "memnun olacağız."
 
 #. [message]: speaker=Baldras
@@ -1418,7 +1418,7 @@ msgid ""
 "curriculum, you might say, were dealt with harshly. We are outcasts because "
 "we seek to master shadow magic. Our secrecy and security are not cheap."
 msgstr ""
-"Sabık kralın büyü bakanlığı Wesnoth’taki büyücülerin eğitimi ve işe "
+"Sabık kralın büyü bakanlığı Vesnot’taki büyücülerin eğitimi ve işe "
 "yerleştirilmelerini sıkı bir şekilde denetliyordu. Müfredat programından "
 "ayrılmaya cüret edenlere insafsızca davranıldı. Biz toplum dışına "
 "itilenleriz çünkü kara büyüde uzmanlaşmaya çalıştık. Gizlilik ve "
@@ -1459,7 +1459,7 @@ msgid ""
 "occupied by King or Queen, aids us."
 msgstr ""
 "Böyle bir şey yok. Siz bizi arayıp buldunuz. Fakat, durumunuzu biliyorum ve "
-"yardıma hazırım. İster kraldan kaynaklansın ister kraliçeden, Wesnoth "
+"yardıma hazırım. İster kraldan kaynaklansın ister kraliçeden, Vesnot "
 "tahtındaki herhangi bir zayıflık bizim işimize yarar."
 
 #. [message]: speaker=Helicrom
@@ -1535,8 +1535,8 @@ msgid ""
 "Studies? Peace? You mean to continue feeding on the lawful citizens of "
 "Wesnoth. There will be no peace for them."
 msgstr ""
-"Eğitim? Barış? Yani Wesnoth’un namuslu vatandaşlarını yemeye devam "
-"edeceksin. Onlar için barış filan olmayacak."
+"Eğitim? Barış? Yani Vesnot’un namuslu vatandaşlarını yemeye devam edeceksin. "
+"Onlar için barış filan olmayacak."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:332
@@ -1599,8 +1599,8 @@ msgid ""
 "Send your men with us. They will be valuable help as we prepare for the "
 "assault from the Wesnoth army garrison."
 msgstr ""
-"Adamlarını bizimle gönder. Wesnoth ordusundan gelecek saldırıya "
-"hazırlanırken değerli yardımları olacaktır."
+"Adamlarını bizimle gönder. Vesnot ordusundan gelecek saldırıya hazırlanırken "
+"değerli yardımları olacaktır."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:379
@@ -1654,7 +1654,7 @@ msgid ""
 msgstr ""
 "İlerledikçe, Karsin ve Gri Orman çevresinde bulunan küçük köylerdeki "
 "kadınlar ve erkekler gruba yaklaşıyor ve onlara katılmak istiyorlardı. "
-"Kraliçenin tahta çıkışı Wesnoth vatandaşları üzerinde huzursuz ve kasvetli "
+"Kraliçenin tahta çıkışı Vesnot vatandaşları üzerinde huzursuz ve kasvetli "
 "bir hava yaratmış ve bazıları ona direnmek istemişti."
 
 #. [part]
@@ -1715,7 +1715,7 @@ msgid ""
 "the Queen, how should I ever expect to?"
 msgstr ""
 "Son bir kaç gündür Lord Maddok’un sözlerini düşünüyorum. Benim asla "
-"kazanamayacağımı anlamış. Biz asla Wesnoth ordusunun tamamını yenmeyeceğiz. "
+"kazanamayacağımı anlamış. Biz asla Vesnot ordusunun tamamını yenmeyeceğiz. "
 "Bu aptalca! Eğer Elensefar’ın asil lordunun kraliçeye direnmeye gönlü yoksa, "
 "ben ondan bir şey nasıl beklerim?"
 
@@ -1737,7 +1737,7 @@ msgid ""
 "I never imagined they would house its enemies."
 msgstr ""
 "Garnizon. Halsted kuleleri bir garnizondan ziyade her biri birer kale, "
-"yeğenim. Onlar bu alanı Wesnoth düşmanlarından korumak için kullanılıyor. "
+"yeğenim. Onlar bu alanı Vesnot düşmanlarından korumak için kullanılıyor. "
 "Oranın bir düşman kalesi olabileceği aklımın ucundan bile geçmemişti."
 
 #. [event]
@@ -1895,7 +1895,7 @@ msgid ""
 "We have spent too much time here. Surely the entire Wesnoth army marches on "
 "our position. We are done for!"
 msgstr ""
-"Burada çok fazla zaman harcadık. Eminim, tüm Wesnoth ordusu buraya "
+"Burada çok fazla zaman harcadık. Eminim, tüm Vesnot ordusu buraya "
 "geliyordur. İşimiz bitti!"
 
 #. [scenario]: id=08_Glory
@@ -1910,7 +1910,7 @@ msgid ""
 "wildlands that separated the human cities surrounding Weldyn and the coastal "
 "regions of Elensefar once and for all."
 msgstr ""
-"Wesnoth zamanıyla 161 yılında, yeni taç giyen kral Veldin’in çevresindeki "
+"Vesnot zamanıyla 161 yılında, yeni taç giyen kral Veldin’in çevresindeki "
 "insan şehirlerini ve Elensefar’ın kıyı bölgelerini ayıran vahşi toprakları "
 "son bir defa güvenli kılmaya çalışmıştı."
 
@@ -1923,11 +1923,11 @@ msgid ""
 "settlements rapidly spread. The country of Wesnoth had been carved in deed "
 "as well as in name."
 msgstr ""
-"Kurumsal olarak Büyücüler Yüksek Konseyi tarafından yönetilen Wesnoth’un "
+"Kurumsal olarak Büyücüler Yüksek Konseyi tarafından yönetilen Vesnot’un "
 "büyük ordusu, ovaları, hayvan, ork, elf, vs. insana düşman olan ne kadar "
 "yaratık varsa hepsinden temizledi. Elensefar şehir-devleti biçimsel olarak "
-"krallıkla birleşti ve hızla yerleşime açıldı. Wesnoth ülkesi aslında adı "
-"gibi parçalara bölünmüştü."
+"krallıkla birleşti ve hızla yerleşime açıldı. Vesnot ülkesi aslında adı gibi "
+"parçalara bölünmüştü."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:27
@@ -1967,7 +1967,7 @@ msgid ""
 "and the bones of the defeated crumble at the base of Halstead’s frozen waves "
 "of stone."
 msgstr ""
-"Batı ovalarının nöbetçisi olarak yüzyıllarca Wesnoth’un savunmasına hizmet "
+"Batı ovalarının nöbetçisi olarak yüzyıllarca Vesnot’un savunmasına hizmet "
 "etti. Hiçbir savaşta ele geçirilemedi ve hiçbir duvarı aşılamadı. "
 "İstilacıların kanı korkuluklarında ve mağlup edilenlerin kemikleri "
 "Halsted’in donmuş taş tabanında çürüyor."
@@ -2008,7 +2008,7 @@ msgid ""
 "of Wesnoth, this land was tamed with powerful magic. Wizards of an ancient "
 "era forged the walls of Halstead from the rock below."
 msgstr ""
-"Pek de gerçek dışı görünmüyorlar. Wesnoth’un büyük kralları zamanında bu "
+"Pek de gerçek dışı görünmüyorlar. Vesnot’un büyük kralları zamanında bu "
 "bölge güçlü büyülerle ehlileştirildi. Eski çağ büyücüleri Halsted’in "
 "duvarlarını kayalardan oydular."
 
@@ -2026,7 +2026,7 @@ msgid ""
 "access to a wealth of secrets few in Wesnoth are privy to."
 msgstr ""
 "Hayır genç dostum. Halsted’in elbette bir zayıflığı var. Benim bir çok "
-"vasfımın arasında Wesnoth’un bazı sırlarına sır ortağı olmak da var."
+"vasfımın arasında Vesnot’un bazı sırlarına sır ortağı olmak da var."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:477
@@ -2126,7 +2126,7 @@ msgid ""
 "on Halstead. They must think Wesnoth’s army is spread out right now."
 msgstr ""
 "Dikkatli olmalıyız. bakın orada kayda değer bir ork kuvveti var ve onlar da "
-"Halsted’e ilerliyor. Wesnoth ordusunun yayılacağını düşünüyor olmalılar."
+"Halsted’e ilerliyor. Vesnot ordusunun yayılacağını düşünüyor olmalılar."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:529
@@ -2195,7 +2195,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:643
 msgid ""
 "That afternoon, another advance element of the main Wesnoth army arrived..."
-msgstr "Öğleden sonra, ana Wesnoth ordusunun başka bir öncü kolu geldi..."
+msgstr "Öğleden sonra, ana Vesnot ordusunun başka bir öncü kolu geldi..."
 
 #. [message]: speaker=Dommel
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:713
@@ -2397,7 +2397,7 @@ msgid ""
 "night. The spectacle of Halstead’s destruction stunned them into a daze that "
 "only slowly wore off as they made their way north to and past Elensefar."
 msgstr ""
-"Baldras ve adamları geceden yararlanarak batı Wesnoth ovalarına kaçtılar. "
+"Baldras ve adamları geceden yararlanarak batı Vesnot ovalarına kaçtılar. "
 "Halstad’in yıkımı, onları kuzeye ve Elensefar’a doğru ilerlerken giderek "
 "azalan bir sersemliğe uğrattı."
 
@@ -2442,7 +2442,7 @@ msgid ""
 "entire countryside was cursed. He quickly retreated to the traditional "
 "border and set up strong defenses against the west."
 msgstr ""
-"Wesnoth ordusu Halsted harabelerini bulduğunda çok geçti. Çabucak eski "
+"Vesnot ordusu Halsted harabelerini bulduğunda çok geçti. Çabucak eski "
 "sınırlarına geri çekilip batıya karşı savunmalarını güçlendirdiler.  "
 
 #. [part]
@@ -2658,7 +2658,7 @@ msgstr "Köylü"
 msgid ""
 "Peasants live in the small hamlets and villages scattered across the Wesnoth "
 "countryside."
-msgstr "Köylüler Wesnoth’un kenar mahallelerinde ve köylerinde yaşarlar."
+msgstr "Köylüler Vesnot’un kenar mahallelerinde ve köylerinde yaşarlar."
 
 #. [unit_type]: id=Bandit_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:36
@@ -2672,9 +2672,8 @@ msgid ""
 "guided by a group of elders, who are the village’s wisest and most "
 "experienced residents."
 msgstr ""
-"Wesnoth sayfiyelerine dağılmış köyler normalde köyün en bilge ve en "
-"deneyimli sakinleri olan yaşlılardan oluşan bir heyet tarafından "
-"yönetilirler."
+"Vesnot sayfiyelerine dağılmış köyler normalde köyün en bilge ve en deneyimli "
+"sakinleri olan yaşlılardan oluşan bir heyet tarafından yönetilirler."
 
 #. [unit_type]: id=Highwayman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:53
@@ -2710,7 +2709,7 @@ msgid ""
 "The scruffy-haired peasant youth are much like the young people living "
 "elsewhere in Wesnoth: reckless, cocky, and eager to explore."
 msgstr ""
-"Pejmürde ve dağınık köylü gençleri Wesnoth’un her köşesinde rastlanan "
+"Pejmürde ve dağınık köylü gençleri Vesnot’un her köşesinde rastlanan "
 "pervasız, kendini beğenmiş ve keşfe meraklı genç insanlardır."
 
 #. [female]
@@ -2729,7 +2728,7 @@ msgid ""
 "The watchmen are men and women who protect the villages from marauders, both "
 "human and otherwise, that prowl the Wesnoth countryside at night."
 msgstr ""
-"Gözcüler, Wesnoth sayfiyelerinde geceleyin sinsi sinsi dolaşan insan olsun "
+"Gözcüler, Vesnot sayfiyelerinde geceleyin sinsi sinsi dolaşan insan olsun "
 "olmasın bütün yağmacılara karşı köyleri korumaya çalışan kadınlar ve "
 "erkeklerdir."
 
@@ -2835,7 +2834,7 @@ msgid ""
 "doom, but as Asheviere’s grip tightened they would live to see worse."
 msgstr ""
 "Döndüklerinde köyleri yokedilmişti, ölüler, savaşanlar ve hayatta kalan "
-"birkaç kişi bilinmeyen bir kadere teslim oldu. Acı bir sondu ve Wesnoth'un "
+"birkaç kişi bilinmeyen bir kadere teslim oldu. Acı bir sondu ve Vesnot'un "
 "geleceği giderek karanlığa gömülürken onlar daha kötü günleri görmek için "
 "yaşayacaklardı."
 
@@ -2854,45 +2853,3 @@ msgstr ""
 #~ "As morning dawned over the day after next, they found Relana already "
 #~ "waiting for them."
 #~ msgstr "Ertesi sabah gün ağarırken, Relana zaten onları bekliyordu."
-
-#~ msgid "axe"
-#~ msgstr "balta"
-
-#~ msgid "sword"
-#~ msgstr "kılıç"
-
-#~ msgid "short sword"
-#~ msgstr "kısa kılıç"
-
-#~ msgid "Holy Ankh"
-#~ msgstr "Kutsal arma"
-
-#~ msgid ""
-#~ "You find a hefty pendant on a strange and ominous looking altar. It glows "
-#~ "brightly when you pick it up!"
-#~ msgstr ""
-#~ "Tuhaf ve uğursuz görünüşlü bir sunağın üzerinde ağırca bir süs eşyası "
-#~ "buldunuz. Elinize aldığınızda parlak ışıklar saçmaya başlıyor."
-
-#~ msgid ""
-#~ "There is a strange altar here and a pendant on it. I don’t want to touch "
-#~ "it."
-#~ msgstr "Burada tuhaf bir sunak ve üzerinde de bir süs var. Ona dokunamam."
-
-#~ msgid "holy ankh"
-#~ msgstr "kutsal arma"
-
-#~ msgid "Relnan"
-#~ msgstr "Relnan"
-
-#~ msgid "magic missile"
-#~ msgstr "misilli"
-
-#~ msgid "Turns run out"
-#~ msgstr "Ellerin bitmesi"
-
-#~ msgid "(Baldras!)"
-#~ msgstr "(Baldras!)"
-
-#~ msgid "Translators"
-#~ msgstr "Çevirmenler"
