--- a/po/wesnoth-tb/tr.po
+++ b/po/wesnoth-tb/tr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-tb\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2019-05-04 05:52+0300\n"
+"PO-Revision-Date: 2019-06-08 01:41+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
 "Language-Team: Turkish\n"
 "Language: tr\n"
@@ -67,7 +67,7 @@ msgstr ""
 #, fuzzy
 #| msgid "(Rookie level, 4 scenarios.)"
 msgid "(Novice level, 4 scenarios.)"
-msgstr "(Çaylak seviyesi. 4 senaryo)"
+msgstr "(Toy seviyesi. 4 senaryo)"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:30
@@ -113,7 +113,7 @@ msgid ""
 "them not, until the day a dark mage settled in the region and began seeking "
 "sacrifices for his evil summonings."
 msgstr ""
-"Wesnoth krallığının iyice doğusunda kalan Magre kenti ahalisi huzur içinde "
+"Vesnot krallığının iyice doğusunda kalan Magre kenti ahalisi huzur içinde "
 "yaşar, kente dışardan pek gelen giden olmazdı. Savaşlardan ve savaş "
 "söylentilerinden de haberleri olmazdı. Taa ki, bir kara büyücünün şeytani "
 "emellerine ulaşmak amacıyla yeni kurbanlar aramak için bölgelerine gelişine "
@@ -187,7 +187,7 @@ msgid ""
 "spoken since that evil day at Toen Caric. If he will not come for me, "
 "perhaps he will return to aid our village in its hour of desperate need."
 msgstr ""
-"12 V, 363 WY\n"
+"12 V, 363 VY\n"
 "Magreli Baran'ın günlüğünden alıntı\n"
 "\n"
 "Eğer bu Mordak’la yüzleşebilirsem sanırım sihrim ondan daha güçlü olabilir. "
@@ -491,7 +491,7 @@ msgid ""
 "warning against it. Supposedly the place is haunted by lost souls who hunger "
 "for the living, and anyone who dies there is doomed to join them."
 msgstr ""
-"16 V, 363 WY\n"
+"16 V, 363 VY\n"
 "Magreli Arvit'in günlüğünden alıntı\n"
 "\n"
 "Baran'ı üç gün aradık ve hiçbir şey bulamadan döndük. Önsezilerime göre en "
@@ -524,7 +524,7 @@ msgid ""
 "\n"
 "Besides... I want my brother back."
 msgstr ""
-"16 V, 363 WY\n"
+"16 V, 363 VY\n"
 "Magreli Arvit'in günlüğünden alıntı\\n\n"
 "\n"
 "Ama şimdi batıl inançlarımdan kurtuldum; Bu tür hikayelerin arkasındaki "
@@ -901,7 +901,7 @@ msgid ""
 "man rumored to be this mage’s brother. If that is true, he will stop at "
 "nothing, no more than would I if they held Mordak."
 msgstr ""
-"19 V, 363 WY\n"
+"19 V, 363 VY\n"
 "Klansız Rotarik'in günlüğünden alıntı\n"
 "\n"
 "Mordak’ın hizmetkarlarının sonuncusu ölümünün haberi ile birlikte bu sabah "
@@ -934,7 +934,7 @@ msgid ""
 "be different, but we are broken... and these two men are whole. In each "
 "other, in the ties that bind them, they have strength."
 msgstr ""
-"19 V, 363 WY\n"
+"19 V, 363 VY\n"
 "Klansız Rotarik'in günlüğünden alıntı\n"
 "\n"
 "Bu harap kaleyi güçlendirmek için elimden geleni yaptım. Bizimle gelen "
@@ -1351,7 +1351,7 @@ msgid ""
 "way around it we traveled through some truly beautiful countryside. It has "
 "given us plenty of time to talk."
 msgstr ""
-"27 V, 363 WY\n"
+"27 V, 363 VY\n"
 "Magreli Baran'in günlüğünden alıntı\\n\n"
 "\n"
 "Neredeyse evdeyim. Geçen hafta karışık duygularla doluydum — zaman zaman "
@@ -1385,7 +1385,7 @@ msgid ""
 "merely a remnant of my time locked away in that dungeon, or is it a sign of "
 "something real?"
 msgstr ""
-"27 V, 363 WY\n"
+"27 V, 363 VY\n"
 "Magreli Baran'in günlüğünden alıntı\\n\n"
 "\n"
 "Şu an daha rahat olmama rağmen, düşüncelerim genellikle Toen Karik'e döndü. "
@@ -1591,7 +1591,7 @@ msgid ""
 "But as the company and I are passing through this part of the kingdom with a "
 "new patron, I have asked leave of him to visit my brother and he gave it."
 msgstr ""
-"22 IX, 365 WY\n"
+"22 IX, 365 VY\n"
 "Magreli Arvit'in günlüğünden alıntı\n"
 "\n"
 "Maghre, son gördüğümden çok daha iyi görünüyor. Baran iki yılda harikalar "
@@ -1617,7 +1617,7 @@ msgid ""
 "\n"
 "In the meantime, though, it’s good to relax and enjoy the peace."
 msgstr ""
-"22 IX, 365 WY\n"
+"22 IX, 365 VY\n"
 "Magreli Arvit'in günlüğünden alıntı\n"
 "\n"
 "Bu patron, her şeyden önce bir elf. Arkadaş olacağımızı hiç düşünmedim, ama "
