German translation: localized images
and the usual fixes

--- a/po/wesnoth-httt/de.po
+++ b/po/wesnoth-httt/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-02-23 20:14+0100\n"
+"PO-Revision-Date: 2019-06-17 19:53+0200\n"
 "Last-Translator: German translation team <irc://irc.freenode.net/#wesnoth-"
 "de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
@@ -4464,9 +4464,9 @@ msgid ""
 "a cave. My lord can be somewhat eccentric. We are fighting at the side of "
 "your fellow cave-dwellers to drive back the orcs and trolls."
 msgstr ""
-"Ich bin ein Meermann, Bewohner des weiten Ozeans. Frage mich nicht, was ich "
+"Ich bin ein Meermann, Bewohner des weiten Ozeans. Fraget mich nicht, was ich "
 "in dieser Höhle zu suchen habe. Mein Herr kann manchmal etwas exzentrisch "
-"sein. Wir kämpfen an der Seite eurer Art gegen die Orks und Trolle."
+"sein. Wir kämpfen an der Seite Eurer Art gegen die Orks und Trolle."
 
 #. [message]
 #. Comic relief
@@ -4476,9 +4476,9 @@ msgid ""
 "a cave. My lord can be somewhat eccentric. We are fighting at the side of "
 "your fellow cave-dwellers to drive back the orcs and trolls."
 msgstr ""
-"Ich bin eine Meermaid, Bewohnerin des weiten Ozeans. Frage mich nicht, was "
-"ich in dieser Höhle zu suchen habe. Mein Herr kann manchmal etwas "
-"exzentrisch sein. Wir kämpfen an der Seite eurer Art gegen die Orks und "
+"Ich bin eine Meerjungfrau, Bewohnerin des weiten Ozeans. Fraget mich nicht, "
+"was ich in dieser Höhle zu suchen habe. Mein Herr kann manchmal etwas "
+"exzentrisch sein. Wir kämpfen an der Seite Eurer Art gegen die Orks und "
 "Trolle."
 
 #. [message]: speaker=Ulfdain
@@ -4496,13 +4496,13 @@ msgid ""
 "(sniffs) A mer-mead. Never heard of it. I doubt yer as tasty as my friends "
 "here."
 msgstr ""
-"<small>(<i>schnüffelt</i>)</small> Meer-Maad … Von so was nie gehört. Glaub "
-"auch nicht, dass du so lecker bist wie meine Freunde hier."
+"<small>(<i>schnüffelt</i>)</small> Meer-Juun … Von so was nie gehört. Glaub "
+"auch nicht, dass Ihr so lecker seid wie meine Freunde hier."
 
 #. [message]
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:264
 msgid "Why are you down here? Are those... troll carcasses?"
-msgstr "Warum bist du hier unten? Sind das... Trollleichen?"
+msgstr "Warum seit Ihr hier unten? Sind das... Trollleichen?"
 
 #. [message]: speaker=Ulfdain
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:268
@@ -4519,7 +4519,7 @@ msgstr ""
 #. [message]
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:272
 msgid "How long have you been here?"
-msgstr "Wie lange bist du schon hier?"
+msgstr "Wie lange seit Ihr schon hier?"
 
 #. [message]: speaker=Ulfdain
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:276
@@ -4534,7 +4534,7 @@ msgstr ""
 #. [message]
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:280
 msgid "I will rescue you. Hold onto my shoulders, sir dwarf."
-msgstr "Ich werde dich retten. Setz dich auf meine Schultern, Herr Zwerg."
+msgstr "Ich werde Euch retten. Setz Euch auf meine Schultern, Zwerg."
 
 #. [message]: speaker=Ulfdain
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:284
@@ -4556,7 +4556,7 @@ msgid ""
 "Well, mer-mahn, we made it. I will fight for yer lord. He sounds like a "
 "brave fellow."
 msgstr ""
-"Geschafft, Meer-Mahn. Gut, ich schließe mich eurem Herrn an. Könnte sein, "
+"Geschafft, Meer-Mahn. Gut, ich schließe mich Eurem Herrn an. Könnte sein, "
 "dass der genau mein Geschmack ist …"
 
 #. [message]: speaker=Ulfdain
@@ -4565,7 +4565,7 @@ msgid ""
 "Well, mer-mead, we made it. I will fight for yer lord. He sounds like a "
 "brave fellow."
 msgstr ""
-"Gut, Meer-Maad. Wir haben es geschafft. Ich werde mich eurem Herrn "
+"Gut, Meer-Juun. Wir haben es geschafft. Ich werde mich Eurem Herrn "
 "anschließen. Es hört sich so an, als wäre er genau mein Geschmack."
 
 #. [message]: speaker=unit
@@ -7349,6 +7349,7 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:433
+#, fuzzy
 msgid ""
 "Then you should look to the north and east. But, if you would, might we ask "
 "your assistance?"
@@ -8980,7 +8981,7 @@ msgstr ""
 #: data/campaigns/Heir_To_The_Throne/units/Battle_Princess.cfg:4
 #: data/campaigns/Heir_To_The_Throne/units/Battle_Princess.cfg:102
 msgid "female^Battle Princess"
-msgstr "Kriegerprinzessin"
+msgstr "Kriegsprinzessin"
 
 #. [unit_type]: id=Battle Princess, race=human
 #: data/campaigns/Heir_To_The_Throne/units/Battle_Princess.cfg:28
