--- a/po/wesnoth-nr/de.po
+++ b/po/wesnoth-nr/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-02-23 21:26+0100\n"
+"PO-Revision-Date: 2019-06-17 19:12+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -7309,8 +7309,8 @@ msgid ""
 msgstr ""
 "Das einzige – nun ja, und größte – Problem für unseren Plan sind diese "
 "verfluchten Orks. Sie haben sich unter Rakshas Kommando vereinigt und sind "
-"entschlossen Knalga zu einem orkischen Stützpunkt zu machen. Alle Zwerge und "
-"Menschen, die sich ihnen in den Weg stellen, werden sie töten oder "
+"entschlossen, Knalga zu einem orkischen Stützpunkt zu machen. Alle Zwerge "
+"und Menschen, die sich ihnen in den Weg stellen, werden sie töten oder "
 "versklaven."
 
 #. [message]: speaker=Eryssa
@@ -9263,7 +9263,7 @@ msgstr "Besiegt die Orks"
 #. [note]
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:498
 msgid "You will not receive any gold if Sisal dies."
-msgstr ""
+msgstr "Ihr werdet kein Gold erhalten falls Sisal stirbt."
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:517
@@ -9297,16 +9297,12 @@ msgstr "Haha! Wir haben das Gold endlich!"
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:552
-#, fuzzy
-#| msgid ""
-#| "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum "
-#| "and report back to the Master."
 msgid ""
 "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver the "
 "gold. Now let’s crush the rest of this scum!"
 msgstr ""
-"Hahaha! Auftrag ausgeführt, Männer! Nun lasst uns den Rest dieses Abschaums "
-"zu Brei schlagen und dem Meister davon Bericht erstatten."
+"Hahaha! Auftrag ausgeführt, Männer! Schickt einen Wolf mit dem Gold zu "
+"Rakshas. Und lasst uns den Rest dieses Abschaums zu Brei schlagen!"
 
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:564
