--- a/po/wesnoth-units/de.po
+++ b/po/wesnoth-units/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-06-07 01:12+0200\n"
+"PO-Revision-Date: 2019-06-21 17:24+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -3871,7 +3871,7 @@ msgid ""
 msgstr ""
 "Die einst großen Älteren Magier haben noch immer viel ihrer Kraft, obwohl "
 "sie mit den Jahren etwas abgenommen hat. Ihre starken Lichtblitze werden auf "
-"dem Schlachtfeld von allen ihren Feinden gefürchtet."
+"dem Schlachtfeld von all ihren Feinden gefürchtet."
 
 #. [attack]: type=fire
 #: data/core/units/humans/Mage_Elder.cfg:35
